$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.1.7 (?? ??? 2007)
 - Patch 1798549: Updated French translation
 - Fix bug [ 1802380 ] Error in freebusy.php.

Version 1.1.6 (19 Sep 2007)
 - Patch 1791947: Handle the OPTIONS method in icalclient.php
   (Used by Evolution linux client.)
 - Fixed bug 1794658, 1795649: various files (upcoming.php, rss.php, etc.)
   were missing needed includes/formvars.php.
 - Patch 1792796: Debian fix for vulnerability CVE-2006-6669
   Fixes cross-site scripting (XSS) vulnerability in export_handler.php.

Version 1.1.5 (12 Sep 2007)
 - Security fix: vulnerability in $includeDir in functions.php
   Renamed getPredefinedVariables.php to formvars.php
 - Bug fix: [ 1780226 ] Repeat event monthly by position
 - Bug fix: [ 1784746 ] Event conflict checking does not work for recurring events
 - Patch 1719114: Allow leading/trailing space in header/trailer file name
 - Bug fix: icalclient.php was not working with Thunderbird/Lightning
 - Added Indonesian translation

Version 1.1.4 (28 Aug 2007)
 - Fixed problem with RSS feed not validating
 - Fixed bug [ 1776496 ] view Week by Time Table is skewed
 - Disabled option to disable users at this time. It was not full implemented anyway.
   See Bug Report[ 1775544 ] Enable/Disable Users
 - Fixed bug [ 1746529 ] login.php is still cached after changing anything at admin.php
 - Added CDATA block around JS in view_r.php
 - Fixed bug [ 1716961 ] View other peoples Private Date Descriptions
 - Fixed bug [ 1768505 ] unclosed select-tag
 - Fixed bug [ 1657776 ] reminder time zone problem
 - Fixed bug [ 1725025 ] rss error when showdate=1
 - Fixed bug [ 1748124 ] reminder email has wrong date
 - Fixed bug [ 1766614 ] 'weekstart' at edit_entry is wrong
Version 1.1.3 (4 Aug 2007)
 - Fixed bug: when upgrading from 1.0.5 to 1.1.X, a bad cookie session can
   cause PHP to crash on some systems.
 - If settings.php is size 0, then redirect to install page (because install